--- a/addlocationbased.html
+++ b/addlocationbased.html
@@ -137,6 +137,15 @@
 					<li data-username="form elements advance component validation masking wizard picker select"
 						class="nav-item pcoded-hasmenu">
 						<a href="#!" class="nav-link"><span class="pcoded-micon"><i class="feather icon-video"></i></span><span
+								class="pcoded-mtext">Video Cateogory</span></a>
+						<ul class="pcoded-submenu">
+							<li class=""><a href="addvideocategory.html" class="">Add Video Category</a></li>
+							<li class=""><a href="viewvideocategorylist.html" class="">Video Category List</a></li>							
+						</ul>
+					</li>
+					<li data-username="form elements advance component validation masking wizard picker select"
+						class="nav-item pcoded-hasmenu">
+						<a href="#!" class="nav-link"><span class="pcoded-micon"><i class="feather icon-play"></i></span><span
 								class="pcoded-mtext">Video Commercials</span></a>
 						<ul class="pcoded-submenu">
 							<li class=""><a href="addads.html" class="">Add Video Ads</a></li>
