--- a/.html
+++ b/.html
@@ -123,7 +123,7 @@
 					</li>
 					<li data-username="form elements advance component validation masking wizard picker select"
 						class="nav-item pcoded-hasmenu">
-						<a href="#!" class="nav-link"><span class="pcoded-micon"><i class="feather icon-video"></i></span><span
+						<a href="#!" class="nav-link"><span class="pcoded-micon"><i class="feather icon-play"></i></span><span
 								class="pcoded-mtext">Video Commercials</span></a>
 						<ul class="pcoded-submenu">
 							<li class=""><a href="addads.html" class="">Add Video Ads</a></li>
