View Ads Page Created

--- a/viewbuses.html
+++ b/viewbuses.html
@@ -834,6 +834,7 @@
 														<th>Name</th>
 														<th>Bus No</th>
 														<th>Route</th>
+														<th>Code</th>
                                                         <th>View</th>
                                                         <th>Logs</th>
                                                         <th>Device Mgmt</th>
@@ -849,6 +850,7 @@
                                                         <td>Mahanagar</td>
                                                         <td>5423</td>
                                                         <td>Ringroad Route 1</td>
+                                                        <td>****** <i class="feather icon-eye"></i><i class="feather icon-reset"></i></td>
                                                         <td>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
 																class="feather icon-camera"></i></a>
@@ -864,10 +866,9 @@
 																class="feather icon-download"></i></a>
 														</td>
 														<td>
-															<a href="" type="button" class="btn-sm btn-info" 
-																data-bs-toggle="tooltip">Assign</a>
+															
 															<a href="" type="button" class="btn-sm btn-danger" 
-																data-bs-toggle="tooltip">Remove</a>
+																data-bs-toggle="tooltip" title="Remove assigned device">Remove</a>
 														</td>
                                                         <td>
 															<div class="form-check form-switch mb-2">
@@ -891,6 +892,7 @@
                                                         <td>Mahasagar</td>
                                                         <td>423</td>
                                                         <td>Ringroad Route 2</td>
+														<td>****** <i class="feather icon-eye"></i><i class="feather icon-refresh"></i></td>
                                                         <td>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
 																class="feather icon-camera"></i></a>
@@ -906,10 +908,9 @@
 																class="feather icon-download"></i></a>
 														</td>
 														<td>
-															<a href="" type="button" class="btn-sm btn-info" 
-																data-bs-toggle="tooltip">Assign</a>
-															<a href="" type="button" class="btn-sm btn-danger" 
-																data-bs-toggle="tooltip">Remove</a>
+															<a href="" type="" class="btn-sm btn btn-outline-secondary" 
+																data-bs-toggle="tooltip" >Unassigned</a>
+															
 														</td>
                                                         <td>
 															<div class="form-check form-switch mb-2">
@@ -932,6 +933,7 @@
                                                         <td>Sajha</td>
                                                         <td>5213</td>
                                                         <td>Sajha Route 1</td>
+														<td>****** <i class="feather icon-eye"></i>  <i class="feather icon-refresh"></i></td>
                                                         <td>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
 																class="feather icon-camera"></i></a>
@@ -946,11 +948,9 @@
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Download Log"><i
 																class="feather icon-download"></i></a>
 														</td>
-														<td>
-															<a href="" type="button" class="btn-sm btn-info" 
-																data-bs-toggle="tooltip">Assign</a>
+														<td>															
 															<a href="" type="button" class="btn-sm btn-danger" 
-																data-bs-toggle="tooltip">Remove</a>
+																data-bs-toggle="tooltip" title="Remove assigned device" >Remove</a>
 														</td>
                                                         <td>
 															<div class="form-check form-switch mb-2">
