--- a/addads.html
+++ b/addads.html
@@ -825,7 +825,7 @@
 										<ul class="breadcrumb">
 											<li class="breadcrumb-item"><a href="index.html"><i
 														class="feather icon-home"></i></a></li>
-											<li class="breadcrumb-item"><a href="#!">Add Video Commercial Ad</a></li>
+											<li class="breadcrumb-item"><a href="#!">Add Video Commercial</a></li>
 										</ul>
 									</div>
 								</div>
@@ -838,7 +838,7 @@
                             <div class="col-sm-12">
                                 <div class="card col-xl-12 col-sm-12">
                                     <div class="card-header">
-                                        <h5>Add Video Commercial Ad</h5>
+                                        <h5>Add Video Commercial</h5>
                                     </div>
                                     <div class="row card-body col-xl-12 col-sm-12">
                                         <div class=" col-xl-12">
@@ -846,24 +846,13 @@
                                             <div class="row">
                                                <div class="col-md-6">
 													<div class="row">
-														<div class="col-md-6">
+														<div class="col-md-12">
 															<div class="form-group">
 																<label class="form-label">Name</label>
 																<input type="text" class="form-control" name="validation-email"
 																	placeholder="Enter Video Commercial Ad Name">
 															</div>													
-														</div>
-														<div class="col-md-6">
-															<div class="form-group">
-																<label class="form-label">Select Video Category</label>
-																<select class="form-control" name="validation-select">
-																	<option value>Select Category</option>
-																	<option value="pitons">Trailer</option>
-																	<option value="cams">Commercial Ad</option>
-																	<option value="nuts">Short Commercial Ad</option>																	                                                           
-																</select>
-															</div>													
-														</div>
+														</div>														
 													</div>
 													
 													<div class="row">
