--- a/viewads.html
+++ b/viewads.html
@@ -917,7 +917,7 @@
 														</td>										
 														<td>9/20/2024</td>
                                                         <td>30 Min</td>
-														<td>Ringroad 1<br>15 out of 20 buses</td>
+														<td>Ringroad 1 (15 Buses)</td>
                                                         <td>
 															<div class="form-check form-switch mb-2">
 																<input type="checkbox" class="form-check-input input-primary"
