--- a/addstation.html
+++ b/addstation.html
@@ -833,7 +833,14 @@
                                                         <input type="text" class="form-control" name="validation-email"
                                                             placeholder="Station Name">
                                                     </div>
-                                                </div>                                                                                                   
+                                                </div>   
+												<div class="col-md-12">
+                                                    <div class="form-group">
+                                                        <label class="form-label">Station Audio File</label>
+                                                        <input type="file" class="form-control" name="validation-email"
+                                                            placeholder="Station Name">
+                                                    </div>
+                                                </div>                                                                                                    
                                                 <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label class="form-label">Latitude</label>
