--- a/viewstations.html
+++ b/viewstations.html
@@ -831,6 +831,7 @@
                                                     <tr>
                                                         <th>SN No</th>
 														<th>Station Name</th>
+														<th>Audio Preview</th>
 														<th>Latitude</th>
 														<th>Longitude</th>
                                                         <th>Radius</th>
@@ -842,6 +843,8 @@
                                                     <tr>
                                                         <td>1</td>
                                                         <td>Lagankhel</td>
+                                                        <td><a type="button" class="btn btn-rounded btn-outline-warning" title="Content List"><i
+																class="feather icon-play"></i>Preview</a></td>
                                                         <td>123213</td>
                                                         <td>096721</td>
                                                         <td>100</td>
@@ -858,6 +861,8 @@
                                                     <tr>
                                                         <td>2</td>
                                                         <td>Kalimati</td>
+                                                        <td><a type="button" class="btn btn-rounded btn-outline-warning" title="Content List"><i
+																class="feather icon-play"></i>Preview</a></td>
                                                         <td>123498</td>
                                                         <td>209348</td>
                                                         <td>50</td>
@@ -874,6 +879,8 @@
                                                     <tr>
                                                         <td>3</td>
                                                         <td>Kausaltar</td>
+                                                        <td><a type="button" class="btn btn-rounded btn-outline-warning" title="Content List"><i
+																class="feather icon-play"></i>Preview</a></td>
                                                         <td>123498</td>
                                                         <td>209348</td>
                                                         <td>70</td>
